Correction of overflow problems

--- a/yoda/static/default.css
+++ b/yoda/static/default.css
@@ -10,6 +10,15 @@
     max-width: 300px;
 }
 
+.file-source {
+    max-height: 100vh;
+    overflow: auto;
+}
+#data-col-row {
+    max-height: 80vh;
+    overflow: auto;
+}
+
 pre {
     line-height: 1.3;
 }
